--- a/src/lk/ijse/cal/cal.html
+++ b/src/lk/ijse/cal/cal.html
@@ -23,9 +23,9 @@
             right: 0;
             margin: auto;
             background: #686e73;
-            border-bottom:5px solid gray;
+            border-bottom:5px solid #808080;
             border-radius:4px;
-            box-shadow:2px 2px 2px gray;
+            box-shadow:2px 2px 2px #808080;
             padding:15px;
         }
         .number{
@@ -76,7 +76,7 @@
         }
 
         .number li:hover{
-            background: gray;
+            background: #808080;
             border-bottom: 4px solid dimgrey;
             color: white;
         }
