--- a/src/lk/ijse/cal/cal.html
+++ b/src/lk/ijse/cal/cal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Calculator</title>
-    <link rel="stylesheet" href="assets/normalize.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
     <style>
         body{
             overflow: hidden;
@@ -90,7 +90,7 @@
     </style>
 </head>
 <body>
-<img src="assets/cal1.png">
+<img src="assets/img/cal1.png">
 <div class="main">
     <div class="display" id="display">
         <p></p>
