--- a/src/lk/ijse/cal/cal.html
+++ b/src/lk/ijse/cal/cal.html
@@ -39,42 +39,6 @@
 </div>
 
 <script src="assets/js/jquery-3.7.0.min.js"></script>
-<script>
-    window.onload = function (){
-        var elements = document.getElementsByTagName("li");
-        var screen = document.querySelectorAll('#display p')[0];
-        var clear =   document.getElementsByClassName('clear')[0];
-
-        for(var i=0;i<elements.length;i+=1){
-            if(elements[i].innerHTML === '='){
-                elements[i].addEventListener("click", calculate(i));
-            }else{
-                elements[i].addEventListener("click", addtocurrentvalue(i));
-            }
-        }
-
-        function addtocurrentvalue (i){
-            return function(){
-                if (elements[i].innerHTML === "÷") {
-                    screen.innerHTML  +=  "/ " ;
-                }else if(elements[i].innerHTML === "x"){
-                    screen.innerHTML += "*";
-                } else{
-                    screen.innerHTML  += elements[i].innerHTML;
-                }
-            };
-        }
-        clear.onclick = function () {
-            screen.innerHTML = '';
-        };
-
-        function calculate(i) {
-            return function () {
-                screen.innerHTML = eval(screen.innerHTML);
-            };
-        }
-    };
-
-</script>
+<script src="assets/js/Script.js"></script>
 </body>
 </html>
